# pact-rs

./: .dockerignore  ARCHITECTURE.md  CAPABILITIES_EXPLAINED.md  CHAIN_DATA_USAGE_EXAMPLES.md  CLAUDE.md  CONFIGURABLE_FORMATTING_DEMO.md  CRITICAL_FIXES_IMPLEMENTATION_GUIDE.md  Dockerfile  FINAL_CONSOLIDATION_PLAN.md  FORMATTING_CONFIGURATION_GUIDE.md  HASKELL_RUST_CRATE_MAPPING.md  LSP_IMPLEMENTATION_SUMMARY.md  PACT_RUST_MIGRATION_PLAN.md  PACT_USER_GUIDE.md  README.md  RUST_ALIGNMENT_PLAN.md  RUST_HASKELL_COMPATIBILITY_ANALYSIS.md  RUST_MIGRATION_STATUS_DASHBOARD.md  VSCODE_FORMATTING_EXAMPLE.md  build-docker.sh  cabal.project  comprehensive-test-fixed.pact  comprehensive-test.pact  edge-cases-fixed.pact  edge-cases.pact  fix_encoding.py  pact-tng.cabal  simple-lsp-test.sh  simple-test.pact  ss.md  test-complex.pact  test-format-simple.hs  test-format-simple.pact  test-format2.pact  test-format3.pact  test-formatter-script.hs  test-formatter.hs  test-formatter.pact  test-formatting.pact  test-hyphen-debug.pact  (+6 more)
pactlings/: Cargo.toml  EXPANDED_EXERCISES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  pactlings.toml
pactlings/exercises/applications/: 01_token.pact
pactlings/exercises/basics/: 01_expressions.pact  02_types.pact
pactlings/exercises/capabilities/: 01_basic.pact
pactlings/exercises/crypto/: 01_hashing.pact
pactlings/exercises/defpacts/: 01_basic.pact  02_yield_resume.pact
pactlings/exercises/governance/: 01_voting.pact
pactlings/exercises/guards/: 01_basic.pact
pactlings/exercises/marmalade/: 01_token_creation.pact
pactlings/exercises/namespaces/: 01_basic.pact
pactlings/exercises/testing/: 01_repl_basics.pact
pactlings/info/basics/: expressions.md
pactlings/info/capabilities/: basic.md
pactlings/solutions/basics/: 01_expressions_solution.pact
pactlings/solutions/capabilities/: 01_basic_solution.pact
pactlings/src/: cli.rs  config.rs  exercise.rs  hint.rs  main.rs  progress.rs  run.rs  verify.rs  watch.rs
rust-migration/: .editorconfig  .gitignore  .pact_history  .pre-commit-config.yaml  .rustfmt.toml  CRATE_CONSOLIDATION_PLAN.md  Cargo.toml  Justfile  PACT_RUST_FEATURE_PARITY_PLAN.md  RESTORE_TODO_CONTEXT.md  STATUS.md  clippy.toml  push-to-fork.sh  rust-toolchain.toml  test-math.rs  test_basic_parsing.rs  test_error_integration.rs  test_integration.rs  test_integration_Cargo.toml  test_lexer_errors.rs  test_multiple_strings.rs  test_parser_errors.rs  test_repl_errors.pact
rust-migration/.cargo/: config.toml
rust-migration/.github/workflows/: ci.yml
rust-migration/crates/pact-cek/: ARCHITECTURE_REDESIGN.md  BUILTIN_ENV_ISSUE.md  Cargo.toml  run_tests.sh  test_e2e.pact
rust-migration/crates/pact-cli/: Cargo.toml
rust-migration/crates/pact-compiler/: Cargo.toml
rust-migration/crates/pact-core/: Cargo.toml
rust-migration/crates/pact-crypto/: Cargo.toml
rust-migration/crates/pact-db/: Cargo.toml
rust-migration/crates/pact-eval/: Cargo.toml
rust-migration/crates/pact-ir/: Cargo.toml
rust-migration/crates/pact-lsp/: Cargo.toml
rust-migration/crates/pact-modules/: Cargo.toml
rust-migration/crates/pact-repl/: Cargo.toml
rust-migration/crates/pact-schema/: Cargo.toml
rust-migration/crates/pact-server/: Cargo.toml
rust-migration/crates/pact-syntax/: Cargo.toml
rust-migration/pact-capability/: Cargo.toml
rust-migration/pact-capability/src/: guards.rs  manager.rs  state.rs  types.rs
rust-migration/pact-cek/: Cargo.toml  IMPLEMENTATION_PLAN.md  test_arithmetic.pact
rust-migration/pact-cek/src/: cont.rs  error.rs  eval.rs  lib.rs  monad.rs  tests.rs  types.rs
rust-migration/pact-cek/tests/: arithmetic_registration_test.rs  database_ops_test.rs  format_time_test.rs  list_ops_test.rs
rust-migration/pact-cli/: Cargo.toml
rust-migration/pact-compiler/: Cargo.toml
rust-migration/pact-compiler/src/: cek_integration.rs  compile.rs  lib.rs  module_hash.rs  module_storage.rs  orchestration.rs  transitive_deps.rs
rust-migration/pact-compiler/tests/: cek_integration_test.rs  e2e_compilation_test.rs  module_hash_integration_test.rs  module_storage_test.rs  test_arithmetic_compilation.rs
rust-migration/pact-crypto/: Cargo.toml
rust-migration/pact-crypto/src/: encoding.rs  hash.rs  hashing.rs  lib.rs  pairing.rs  principal.rs  signature.rs
rust-migration/pact-db/: Cargo.toml
rust-migration/pact-db/src/: lib.rs  mock.rs  operations.rs  serialization.rs  sqlite.rs  traits.rs  types.rs  validation.rs
rust-migration/pact-errors/: Cargo.toml
rust-migration/pact-errors/examples/: error_demo.rs
rust-migration/pact-errors/src/: diagnostic.rs  lib.rs  tests.rs
rust-migration/pact-errors/tests/: error_tests.rs
rust-migration/pact-eval/: Cargo.toml
rust-migration/pact-eval/src/: const_eval.rs  integration_tests.rs  literal_eval.rs  type_checker.rs
rust-migration/pact-gas/: Cargo.toml
rust-migration/pact-gas/src/: lib.rs  meter.rs
rust-migration/pact-ir/: Cargo.toml
rust-migration/pact-ir/src/: desugar.rs  lowering.rs  module.rs  pipeline.rs  renamer.rs  term.rs
rust-migration/pact-ir/tests/: test_arithmetic_desugar.rs
rust-migration/pact-lexer/: ARCHITECTURE.md  Cargo.toml  EXAMPLES.md  README.md
rust-migration/pact-lexer/benches/: lexer_benches.rs
rust-migration/pact-lexer/src/: lib.rs  token.rs
rust-migration/pact-lexer/test-files/: large-contract.pact
rust-migration/pact-lsp/: Cargo.toml
rust-migration/pact-lsp/src/: hover.rs  (+10 more)
rust-migration/pact-math/: Cargo.toml
rust-migration/pact-modules/: Cargo.toml
rust-migration/pact-names/: Cargo.toml
rust-migration/pact-parser/: ARCHITECTURE.md  Cargo.toml  EXAMPLES.md  README.md
rust-migration/pact-repl/: Cargo.toml
rust-migration/pact-request-api/: Cargo.toml
rust-migration/pact-schema/: Cargo.toml
rust-migration/pact-server/: Cargo.toml
rust-migration/pact-shared-types/: Cargo.toml
rust-migration/pact-tests/: Cargo.toml
rust-migration/pact-values/: Cargo.toml
rust-migration/test-files/: arithmetic.pact  arithmetic.repl  complex.pact  database.pact  error.pact  error.repl  numbers.pact  simple.pact  simple.repl
(+389 files in other folders)
