[package]
name = "pactlings"
version = "0.1.0"
edition = "2021"
authors = ["Pact Team"]
description = "Interactive Pact smart contract language tutorial"
license = "MIT"
repository = "https://github.com/kadena-io/pact-5"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
crossterm = "0.27"
indicatif = "0.17"
console = "0.15"
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.0"
glob = "0.3"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"