[workspace]
resolver = "2"
members = [
    "crates/pact-core",
    "crates/pact-crypto",
    "crates/pact-schema", 
    "crates/pact-syntax",
    "crates/pact-ir",
    "crates/pact-eval",
    "crates/pact-db",
    "crates/pact-repl",
    "crates/pact-lsp",
    "crates/pact-cli",
    "crates/pact-cek",
    "crates/pact-modules",
    "crates/pact-server",
    "crates/pact-compiler",
]

[workspace.package]
version = "5.0.0"
authors = ["Kadena LLC <ops@kadena.io>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/salamaashoush/pact-rs"
homepage = "https://github.com/salamaashoush/pact-rs"
rust-version = "1.87"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
indexmap = { version = "2.0", features = ["serde"] }
smallvec = "1.11"
bytes = "1.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

# Parsing
logos = "0.14"
lalrpop-util = "0.20"
nom = "7.1"

# Cryptography
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
p256 = "0.13"
blake2 = "0.10"

# Math - Pure Rust implementations
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-rational = { version = "0.4", features = ["serde"] }
num-integer = "0.1"

# Database
rusqlite = { version = "0.30", features = ["bundled", "serde_json"] }

# LSP
tower-lsp = "0.20"
lsp-types = "0.95"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
rustyline = "13.0"

# FFI
cbindgen = "0.26"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.8"
dashmap = "5.5"
compact_str = "0.8.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
im = { version = "15.1", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[workspace.lints.rust]
# Forbid unsafe code except where absolutely necessary
unsafe_code = "warn"
# Enforce documentation
missing_docs = "warn"
missing_debug_implementations = "warn"
# Warn on common mistakes
unused_results = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# Enable lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Performance lints (critical for interpreters)
inefficient_to_string = "warn"
unnecessary_to_owned = "warn"
clone_on_ref_ptr = "warn"
mutex_atomic = "warn"
needless_collect = "warn"
redundant_allocation = "warn"
slow_vector_initialization = "warn"
trivially_copy_pass_by_ref = "warn"
large_stack_frames = "warn"

# Error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
todo = "warn"
unimplemented = "warn"

# Code clarity
cognitive_complexity = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"

# Parser/Interpreter specific allows
module_name_repetitions = "allow"  # Common in AST definitions
must_use_candidate = "allow"        # Too noisy
missing_errors_doc = "allow"        # Often obvious from type
missing_panics_doc = "allow"        # Often obvious from code
large_enum_variant = "allow"        # AST nodes can be large
type_complexity = "allow"           # Parser types are complex
