[package]
name = "pact-cek"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Clean CEK (Control-Environment-Kontinuation) machine implementation for Pact evaluation following Haskell architecture exactly"

[dependencies]
# Internal dependencies
pact-ir = { path = "../pact-ir" }
pact-values = { path = "../pact-values" }
pact-errors = { path = "../pact-errors" }
pact-gas = { path = "../pact-gas" }
pact-names = { path = "../pact-names" }
pact-shared-types = { path = "../pact-shared-types" }
pact-db = { path = "../pact-db" }
pact-schema = { path = "../pact-schema" }

# External dependencies
im = { workspace = true }
compact_str = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"

[dev-dependencies]
proptest = { workspace = true }