[package]
name = "pact-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Cryptographic primitives for Pact"

[dependencies]
pact-shared-types = { path = "../pact-shared-types" }
pact-values = { path = "../pact-values" }
pact-names = { path = "../pact-names" }
sha2 = "0.10"
sha3 = { workspace = true }
tiny-keccak = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
blake2 = { workspace = true }
p256 = { workspace = true }
ed25519-dalek = "2.0"
secp256k1 = { version = "0.28", features = ["global-context"] }
ripemd = "0.1"
hex = "0.4"
rand = "0.8"
digest = "0.10"
serde = { workspace = true }
serde_cbor = "0.11"
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
base64ct = "1.6"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
hex = "0.4"