[package]
name = "pact-gas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Gas metering system for Pact"

[dependencies]
pact-errors = { path = "../pact-errors" }
pact-parser = { path = "../pact-parser" }
pact-shared-types = { path = "../pact-shared-types" }
serde = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
