[package]
name = "pact-math"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Mathematical operations for Pact"

[dependencies]
# Pure Rust arbitrary precision arithmetic
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
