[package]
name = "pact-modules"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Module system and name resolution for Pact"

[dependencies]
pact-values = { path = "../pact-values" }
pact-errors = { path = "../pact-errors" }
pact-names = { path = "../pact-names" }
pact-schema = { path = "../pact-schema" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
