[package]
name = "pact-names"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Module names and qualification system for Pact"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
pact-shared-types = { path = "../pact-shared-types" }
hex = "0.4"
base64ct = "1.6"

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }