[package]
name = "pact-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Parser for the Pact smart contract language"

[dependencies]
pact-names = { path = "../pact-names" }
pact-values = { path = "../pact-values" }
pact-lexer = { path = "../pact-lexer" }
pact-shared-types = { path = "../pact-shared-types" }
pact-errors = { path = "../pact-errors" }
serde = { workspace = true }
thiserror = { workspace = true }
compact_str = { version = "0.8.1", features = ["serde"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parser_benches"
harness = false
