[package]
name = "pact-repl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Interactive REPL for the Pact smart contract language"

[[bin]]
name = "pact-repl"
path = "src/main.rs"

[dependencies]
pact-values = { path = "../pact-values" }
pact-errors = { path = "../pact-errors" }
pact-lexer = { path = "../pact-lexer" }
pact-parser = { path = "../pact-parser" }
pact-compiler = { path = "../pact-compiler" }
pact-cek = { path = "../pact-cek" }
pact-ir = { path = "../pact-ir" }
pact-shared-types = { path = "../pact-shared-types" }
serde = { workspace = true }
thiserror = { workspace = true }
rustyline = "14.0"
colored = "2.0"

[dev-dependencies]
proptest = { workspace = true }