[package]
name = "pact-values"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Runtime value system for Pact"

[dependencies]
pact-shared-types = { path = "../pact-shared-types" }
pact-names = { path = "../pact-names" }
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
bytes = { workspace = true }
base64ct = "1.6"
chrono = "0.4"

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }