[package]
name = "pact-eval"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Evaluation engine for the Pact smart contract language"

[dependencies]
pact-ir = { path = "../pact-ir" }
pact-core = { path = "../pact-core" }
pact-schema = { path = "../pact-schema" }
pact-syntax = { path = "../pact-syntax" }
pact-cek = { path = "../pact-cek" }
pact-db = { path = "../pact-db" }
serde = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
compact_str = "0.8.1"
bumpalo = "3.14"
tokio = { version = "1.35", features = ["rt"] }
[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
