[package]
name = "pact-schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Type system and schema for Pact"

[dependencies]
pact-core = { path = "../pact-core" }
serde = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
