[package]
name = "pact-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "HTTP API server and public API interface for Pact smart contract language (consolidated pact-request-api + pact-server)"

[dependencies]
# Public API types no longer needed - integrated into this crate
# pact-request-api = { path = "../pact-request-api" }
# Core Pact dependencies
pact-compiler = { path = "../pact-compiler" }
pact-cek = { path = "../pact-cek" }
pact-core = { path = "../pact-core" }
pact-db = { path = "../pact-db" }
pact-crypto = { path = "../pact-crypto" }
# pact-builtins = { path = "../pact-builtins" } # Removed - builtins are in pact-cek now
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = "1.0"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Error handling
anyhow = "1.0"
thiserror = { workspace = true }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID for request keys
uuid = { version = "1.6", features = ["v4", "serde"] }
# Base64 encoding
base64 = "0.21"
# Math types
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
# Additional dependencies from pact-request-api
hex = "0.4"
rand = "0.8"
# HTTP client for API functionality
reqwest = { version = "0.11", features = ["json"] }
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"
# Additional dev-dependencies from pact-request-api
proptest = { workspace = true }
